--- a/index.html
+++ b/index.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Your Name - Student</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+
+    <div class="background">
+        <div class="content">
+            <header>
+                <h1>Your Name</h1>
+                <p>Student</p>
+            </header>
+
+            <section>
+                <h2>About Me</h2>
+                <p>Hi, I'm a student passionate about learning and exploring new things.</p>
+            </section>
+
+            <section>
+                <h2>Projects</h2>
+                <p>Check out some of my cool projects!</p>
+            </section>
+
+            <section>
+                <h2>Contact</h2>
+                <p>Feel free to reach out. Let's connect!</p>
+            </section>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2023 Your Name. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
