--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="background">
         <div class="content">
             <header>
-                <h1>Your Name</h1>
+                <h1>Erik Kajacka</h1>
                 <p>Student</p>
             </header>
 
