--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Erik Kajacka. All rights reserved.</p>
     </footer>
 
 </body>
