--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erik Kajacka - Website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Condensed:ital,wght@0,400;0,700;1,400;1,700&family=Roboto+Slab:ital,wght@0,400;0,700;1,400;1,700&display=swap">
+
+
 </head>
 <body>
 
@@ -12,22 +15,29 @@
         <div class="content">
             <header>
                 <h1>Erik Kajacka</h1>
-                <p>Student</p>
+                <p>Undergraduate Student</p>
             </header>
 
             <section>
                 <h2>About Me</h2>
-                <p>Hi, I'm a student passionate about learning and exploring new things.</p>
+                <p>Hi, I'm an undergraduate student passionate about learning and exploring new things.
+                    <br>Currently studying Informatics and Telecommunications at National and Kapodistrian University of Athens.</p>
             </section>
 
             <section>
                 <h2>Projects</h2>
-                <p>Check out some of my cool projects!</p>
+                <p>Check out some of my cool projects on
+                    <a href="https://github.com/erikk03">GitHub</a>!
+                </p>
             </section>
 
             <section>
                 <h2>Contact</h2>
-                <p>Feel free to reach out. Let's connect!</p>
+                <p>Feel free to reach out. Let's connect!<br>
+                    <a href="https://gr.linkedin.com/in/erik-kajacka-1872bb289?trk=people-guest_people_search-card&original_referer=https%3A%2F%2Fwww.linkedin.com%2F">LinkedIn</a>
+                    <a href="https://www.instagram.com/erik.kajacka/?hl=en">Instagram</a>
+                    <a href="mailto:sdi2100043@di.uoa.gr">Email</a>
+                </p>
             </section>
         </div>
     </div>
